// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dynamic options should display disabled dynamic options with tooltip for non-string fields 1`] = `
<div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="indexPatternSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="indexPatternSelect-0"
        id="indexPatternSelect-0-label"
      >
        Index Pattern
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div />
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="fieldSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="fieldSelect-0"
        id="fieldSelect-0-label"
      >
        Field
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiComboBox emotion-euiComboBox"
        data-test-subj="fieldSelect-0"
      >
        <div
          class="euiPopover euiInputPopover emotion-euiPopover-block-EuiInputPopover"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-euiComboBox__formControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
              style="--euiFormControlRightIconsCount: 3;"
            >
              <div
                class="euiComboBox__inputWrap emotion-euiComboBoxInputWrapper"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <span
                  class="euiBadge euiComboBoxPill emotion-euiBadge-hollow-euiComboBoxPill"
                  data-test-subj="euiComboBoxPill"
                  title="numberField"
                  value="numberField"
                >
                  <span
                    class="euiBadge__content emotion-euiBadge__content"
                  >
                    <span
                      class="euiBadge__text emotion-euiBadge__text"
                    >
                      <span
                        class="eui-textTruncate"
                      >
                        numberField
                      </span>
                    </span>
                  </span>
                </span>
                <input
                  aria-autocomplete="list"
                  aria-controls=""
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-invalid="false"
                  autocomplete="off"
                  class="euiComboBox__input emotion-euiComboBoxInput"
                  data-test-subj="comboBoxSearchInput"
                  id="fieldSelect-0"
                  role="combobox"
                  style="inline-size: 2px;"
                  value=""
                />
              </div>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <button
                  aria-label="Clear input"
                  class="euiFormControlLayoutClearButton emotion-euiFormControlLayoutClearButton"
                  data-test-subj="comboBoxClearButton"
                  type="button"
                >
                  <span
                    class="euiFormControlLayoutClearButton__icon emotion-euiFormControlLayoutClearButton__icon-m"
                    data-euiicon-type="cross"
                  />
                </button>
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
                  role="progressbar"
                />
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon-clickable"
                  data-test-subj="comboBoxToggleListButton"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow emotion-euiFormRow"
    id="multiselect-0-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch"
      >
        <button
          aria-checked="true"
          aria-describedby="multiselect-0-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button emotion-euiSwitch__button"
          data-test-subj="listControlMultiselectInput"
          id="multiselect-0"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body emotion-euiSwitch__body-on"
          >
            <span
              class="euiSwitch__icons emotion-euiSwitch__icons-on-enabled"
            >
              <span
                data-euiicon-type="check"
              />
              <span
                data-euiicon-type="cross"
              />
            </span>
          </span>
          <span
            class="euiSwitch__thumb emotion-euiSwitch__thumb-on"
          />
        </button>
        <span
          class="euiSwitch__label emotion-euiSwitch__label"
          id="generated-id"
        >
          Multiselect
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="multiselect-0-help-0"
      >
        Allow multiple selection
      </div>
    </div>
  </div>
  <div
    class="euiFormRow emotion-euiFormRow"
    id="dynamicOptions-0-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch-disabled"
      >
        <button
          aria-checked="true"
          aria-describedby="dynamicOptions-0-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button emotion-euiSwitch__button"
          data-test-subj="listControlDynamicOptionsSwitch"
          disabled=""
          id="dynamicOptions-0"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body emotion-euiSwitch__body-disabled"
          >
            <span
              class="euiSwitch__icons emotion-euiSwitch__icons-on-disabled"
            >
              <span
                data-euiicon-type="check"
              />
              <span
                data-euiicon-type="cross"
              />
            </span>
          </span>
          <span
            class="euiSwitch__thumb emotion-euiSwitch__thumb-on-disabled"
          />
        </button>
        <span
          class="euiSwitch__label emotion-euiSwitch__label-disabled"
          id="generated-id"
        >
          Dynamic Options
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="dynamicOptions-0-help-0"
      >
        Only available for "string" fields
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="size-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="size-0"
        id="size-0-label"
      >
        Size
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="size-0-help-0"
            class="euiFieldNumber emotion-euiFieldNumber"
            data-test-subj="listControlSizeInput"
            id="size-0"
            min="1"
            step="any"
            type="number"
            value="5"
          />
        </div>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="size-0-help-0"
      >
        Number of options
      </div>
    </div>
  </div>
</div>
`;

exports[`renders dynamic options should display dynamic options for string fields 1`] = `
<div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="indexPatternSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="indexPatternSelect-0"
        id="indexPatternSelect-0-label"
      >
        Index Pattern
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div />
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="fieldSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="fieldSelect-0"
        id="fieldSelect-0-label"
      >
        Field
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiComboBox emotion-euiComboBox"
        data-test-subj="fieldSelect-0"
      >
        <div
          class="euiPopover euiInputPopover emotion-euiPopover-block-EuiInputPopover"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-euiComboBox__formControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
              style="--euiFormControlRightIconsCount: 3;"
            >
              <div
                class="euiComboBox__inputWrap emotion-euiComboBoxInputWrapper"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <span
                  class="euiBadge euiComboBoxPill emotion-euiBadge-hollow-euiComboBoxPill"
                  data-test-subj="euiComboBoxPill"
                  title="keywordField"
                  value="keywordField"
                >
                  <span
                    class="euiBadge__content emotion-euiBadge__content"
                  >
                    <span
                      class="euiBadge__text emotion-euiBadge__text"
                    >
                      <span
                        class="eui-textTruncate"
                      >
                        keywordField
                      </span>
                    </span>
                  </span>
                </span>
                <input
                  aria-autocomplete="list"
                  aria-controls=""
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-invalid="false"
                  autocomplete="off"
                  class="euiComboBox__input emotion-euiComboBoxInput"
                  data-test-subj="comboBoxSearchInput"
                  id="fieldSelect-0"
                  role="combobox"
                  style="inline-size: 2px;"
                  value=""
                />
              </div>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <button
                  aria-label="Clear input"
                  class="euiFormControlLayoutClearButton emotion-euiFormControlLayoutClearButton"
                  data-test-subj="comboBoxClearButton"
                  type="button"
                >
                  <span
                    class="euiFormControlLayoutClearButton__icon emotion-euiFormControlLayoutClearButton__icon-m"
                    data-euiicon-type="cross"
                  />
                </button>
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
                  role="progressbar"
                />
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon-clickable"
                  data-test-subj="comboBoxToggleListButton"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow emotion-euiFormRow"
    id="multiselect-0-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch"
      >
        <button
          aria-checked="true"
          aria-describedby="multiselect-0-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button emotion-euiSwitch__button"
          data-test-subj="listControlMultiselectInput"
          id="multiselect-0"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body emotion-euiSwitch__body-on"
          >
            <span
              class="euiSwitch__icons emotion-euiSwitch__icons-on-enabled"
            >
              <span
                data-euiicon-type="check"
              />
              <span
                data-euiicon-type="cross"
              />
            </span>
          </span>
          <span
            class="euiSwitch__thumb emotion-euiSwitch__thumb-on"
          />
        </button>
        <span
          class="euiSwitch__label emotion-euiSwitch__label"
          id="generated-id"
        >
          Multiselect
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="multiselect-0-help-0"
      >
        Allow multiple selection
      </div>
    </div>
  </div>
  <div
    class="euiFormRow emotion-euiFormRow"
    id="dynamicOptions-0-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch"
      >
        <button
          aria-checked="true"
          aria-describedby="dynamicOptions-0-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button emotion-euiSwitch__button"
          data-test-subj="listControlDynamicOptionsSwitch"
          id="dynamicOptions-0"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body emotion-euiSwitch__body-on"
          >
            <span
              class="euiSwitch__icons emotion-euiSwitch__icons-on-enabled"
            >
              <span
                data-euiicon-type="check"
              />
              <span
                data-euiicon-type="cross"
              />
            </span>
          </span>
          <span
            class="euiSwitch__thumb emotion-euiSwitch__thumb-on"
          />
        </button>
        <span
          class="euiSwitch__label emotion-euiSwitch__label"
          id="generated-id"
        >
          Dynamic Options
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="dynamicOptions-0-help-0"
      >
        Update options in response to user input
      </div>
    </div>
  </div>
</div>
`;

exports[`renders dynamic options should display size field when dynamic options is disabled 1`] = `
<div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="indexPatternSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="indexPatternSelect-0"
        id="indexPatternSelect-0-label"
      >
        Index Pattern
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div />
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="fieldSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="fieldSelect-0"
        id="fieldSelect-0-label"
      >
        Field
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiComboBox emotion-euiComboBox"
        data-test-subj="fieldSelect-0"
      >
        <div
          class="euiPopover euiInputPopover emotion-euiPopover-block-EuiInputPopover"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-euiComboBox__formControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
              style="--euiFormControlRightIconsCount: 3;"
            >
              <div
                class="euiComboBox__inputWrap emotion-euiComboBoxInputWrapper"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <span
                  class="euiBadge euiComboBoxPill emotion-euiBadge-hollow-euiComboBoxPill"
                  data-test-subj="euiComboBoxPill"
                  title="keywordField"
                  value="keywordField"
                >
                  <span
                    class="euiBadge__content emotion-euiBadge__content"
                  >
                    <span
                      class="euiBadge__text emotion-euiBadge__text"
                    >
                      <span
                        class="eui-textTruncate"
                      >
                        keywordField
                      </span>
                    </span>
                  </span>
                </span>
                <input
                  aria-autocomplete="list"
                  aria-controls=""
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-invalid="false"
                  autocomplete="off"
                  class="euiComboBox__input emotion-euiComboBoxInput"
                  data-test-subj="comboBoxSearchInput"
                  id="fieldSelect-0"
                  role="combobox"
                  style="inline-size: 2px;"
                  value=""
                />
              </div>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <button
                  aria-label="Clear input"
                  class="euiFormControlLayoutClearButton emotion-euiFormControlLayoutClearButton"
                  data-test-subj="comboBoxClearButton"
                  type="button"
                >
                  <span
                    class="euiFormControlLayoutClearButton__icon emotion-euiFormControlLayoutClearButton__icon-m"
                    data-euiicon-type="cross"
                  />
                </button>
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
                  role="progressbar"
                />
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon-clickable"
                  data-test-subj="comboBoxToggleListButton"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow emotion-euiFormRow"
    id="multiselect-0-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch"
      >
        <button
          aria-checked="true"
          aria-describedby="multiselect-0-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button emotion-euiSwitch__button"
          data-test-subj="listControlMultiselectInput"
          id="multiselect-0"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body emotion-euiSwitch__body-on"
          >
            <span
              class="euiSwitch__icons emotion-euiSwitch__icons-on-enabled"
            >
              <span
                data-euiicon-type="check"
              />
              <span
                data-euiicon-type="cross"
              />
            </span>
          </span>
          <span
            class="euiSwitch__thumb emotion-euiSwitch__thumb-on"
          />
        </button>
        <span
          class="euiSwitch__label emotion-euiSwitch__label"
          id="generated-id"
        >
          Multiselect
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="multiselect-0-help-0"
      >
        Allow multiple selection
      </div>
    </div>
  </div>
  <div
    class="euiFormRow emotion-euiFormRow"
    id="dynamicOptions-0-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch"
      >
        <button
          aria-checked="false"
          aria-describedby="dynamicOptions-0-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button emotion-euiSwitch__button"
          data-test-subj="listControlDynamicOptionsSwitch"
          id="dynamicOptions-0"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body emotion-euiSwitch__body-off"
          >
            <span
              class="euiSwitch__icons emotion-euiSwitch__icons-off-enabled"
            >
              <span
                data-euiicon-type="check"
              />
              <span
                data-euiicon-type="cross"
              />
            </span>
          </span>
          <span
            class="euiSwitch__thumb emotion-euiSwitch__thumb-off"
          />
        </button>
        <span
          class="euiSwitch__label emotion-euiSwitch__label"
          id="generated-id"
        >
          Dynamic Options
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="dynamicOptions-0-help-0"
      >
        Update options in response to user input
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="size-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="size-0"
        id="size-0-label"
      >
        Size
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="size-0-help-0"
            class="euiFieldNumber emotion-euiFieldNumber"
            data-test-subj="listControlSizeInput"
            id="size-0"
            min="1"
            step="any"
            type="number"
            value="5"
          />
        </div>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="size-0-help-0"
      >
        Number of options
      </div>
    </div>
  </div>
</div>
`;

exports[`renders should display chaining input when parents are provided 1`] = `
<div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="indexPatternSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="indexPatternSelect-0"
        id="indexPatternSelect-0-label"
      >
        Index Pattern
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div />
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="fieldSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="fieldSelect-0"
        id="fieldSelect-0-label"
      >
        Field
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiComboBox emotion-euiComboBox"
        data-test-subj="fieldSelect-0"
      >
        <div
          class="euiPopover euiInputPopover emotion-euiPopover-block-EuiInputPopover"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-euiComboBox__formControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
              style="--euiFormControlRightIconsCount: 3;"
            >
              <div
                class="euiComboBox__inputWrap emotion-euiComboBoxInputWrapper"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <span
                  class="euiBadge euiComboBoxPill emotion-euiBadge-hollow-euiComboBoxPill"
                  data-test-subj="euiComboBoxPill"
                  title="keywordField"
                  value="keywordField"
                >
                  <span
                    class="euiBadge__content emotion-euiBadge__content"
                  >
                    <span
                      class="euiBadge__text emotion-euiBadge__text"
                    >
                      <span
                        class="eui-textTruncate"
                      >
                        keywordField
                      </span>
                    </span>
                  </span>
                </span>
                <input
                  aria-autocomplete="list"
                  aria-controls=""
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-invalid="false"
                  autocomplete="off"
                  class="euiComboBox__input emotion-euiComboBoxInput"
                  data-test-subj="comboBoxSearchInput"
                  id="fieldSelect-0"
                  role="combobox"
                  style="inline-size: 2px;"
                  value=""
                />
              </div>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <button
                  aria-label="Clear input"
                  class="euiFormControlLayoutClearButton emotion-euiFormControlLayoutClearButton"
                  data-test-subj="comboBoxClearButton"
                  type="button"
                >
                  <span
                    class="euiFormControlLayoutClearButton__icon emotion-euiFormControlLayoutClearButton__icon-m"
                    data-euiicon-type="cross"
                  />
                </button>
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
                  role="progressbar"
                />
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon-clickable"
                  data-test-subj="comboBoxToggleListButton"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="parentSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="parentSelect-0"
        id="parentSelect-0-label"
      >
        Parent control
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            aria-describedby="parentSelect-0-help-0"
            class="euiSelect emotion-euiSelect"
            id="parentSelect-0"
          >
            <option
              value=""
            />
            <option
              value="1"
            >
              fieldA
            </option>
            <option
              value="2"
            >
              fieldB
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="parentSelect-0-help-0"
      >
        Options are based on the value of parent control. Disabled if parent is not set.
      </div>
    </div>
  </div>
  <div
    class="euiFormRow emotion-euiFormRow"
    id="multiselect-0-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch"
      >
        <button
          aria-checked="true"
          aria-describedby="multiselect-0-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button emotion-euiSwitch__button"
          data-test-subj="listControlMultiselectInput"
          id="multiselect-0"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body emotion-euiSwitch__body-on"
          >
            <span
              class="euiSwitch__icons emotion-euiSwitch__icons-on-enabled"
            >
              <span
                data-euiicon-type="check"
              />
              <span
                data-euiicon-type="cross"
              />
            </span>
          </span>
          <span
            class="euiSwitch__thumb emotion-euiSwitch__thumb-on"
          />
        </button>
        <span
          class="euiSwitch__label emotion-euiSwitch__label"
          id="generated-id"
        >
          Multiselect
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="multiselect-0-help-0"
      >
        Allow multiple selection
      </div>
    </div>
  </div>
  <div
    class="euiFormRow emotion-euiFormRow"
    id="dynamicOptions-0-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch emotion-euiSwitch"
      >
        <button
          aria-checked="false"
          aria-describedby="dynamicOptions-0-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button emotion-euiSwitch__button"
          data-test-subj="listControlDynamicOptionsSwitch"
          id="dynamicOptions-0"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body emotion-euiSwitch__body-off"
          >
            <span
              class="euiSwitch__icons emotion-euiSwitch__icons-off-enabled"
            >
              <span
                data-euiicon-type="check"
              />
              <span
                data-euiicon-type="cross"
              />
            </span>
          </span>
          <span
            class="euiSwitch__thumb emotion-euiSwitch__thumb-off"
          />
        </button>
        <span
          class="euiSwitch__label emotion-euiSwitch__label"
          id="generated-id"
        >
          Dynamic Options
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="dynamicOptions-0-help-0"
      >
        Update options in response to user input
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="size-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="size-0"
        id="size-0-label"
      >
        Size
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="size-0-help-0"
            class="euiFieldNumber emotion-euiFieldNumber"
            data-test-subj="listControlSizeInput"
            id="size-0"
            min="1"
            step="any"
            type="number"
            value="10"
          />
        </div>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="size-0-help-0"
      >
        Number of options
      </div>
    </div>
  </div>
</div>
`;

exports[`renders should not display any options until field is selected 1`] = `
<div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="indexPatternSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="indexPatternSelect-0"
        id="indexPatternSelect-0-label"
      >
        Index Pattern
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div />
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="fieldSelect-0-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="fieldSelect-0"
        id="fieldSelect-0-label"
      >
        Field
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiComboBox emotion-euiComboBox"
        data-test-subj="fieldSelect-0"
      >
        <div
          class="euiPopover euiInputPopover emotion-euiPopover-block-EuiInputPopover"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-euiComboBox__formControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
              style="--euiFormControlRightIconsCount: 2;"
            >
              <div
                class="euiComboBox__inputWrap emotion-euiComboBoxInputWrapper-plainText"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls=""
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-invalid="false"
                  autocomplete="off"
                  class="euiComboBox__input emotion-euiComboBoxInput"
                  data-test-subj="comboBoxSearchInput"
                  id="fieldSelect-0"
                  placeholder="Select field..."
                  role="combobox"
                  style="inline-size: 100%;"
                  value=""
                />
              </div>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
                  role="progressbar"
                />
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon-clickable"
                  data-test-subj="comboBoxToggleListButton"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
